Moving to a proper IDE

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,5 +88,6 @@
         "scoped_allocator": "cpp",
         "typeindex": "cpp",
         "valarray": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": true
 }
