Provided a way to (re) generate the protobuf reflection prerequisites

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,10 @@
 AUTOMAKE_OPTIONS = subdir-objects
-AM_CXXFLAGS = -std=c++11 -I$(srcdir)/src -I$(srcdir)/include -I$(srcdir)/src/vendor
+AM_CXXFLAGS = -std=c++11 -I$(srcdir)/src -I$(srcdir)/include -I$(srcdir)/src/vendor -I$(srcdir)/gen
 AM_LDFLAGS = 
 
 if OSX
 AM_LDFLAGS += -framework CoreFoundation
 endif
-
 
 noinst_LIBRARIES = libauxl_grpc.a
 libauxl_grpc_a_SOURCES = src/parser.cpp \
@@ -16,9 +15,9 @@ libauxl_grpc_a_SOURCES = src/parser.cpp \
 		src/options.c \
 		src/error_collector.c \
 		src/vendor/proto_reflection_descriptor_database.cc \
-		src/vendor/reflection.grpc.pb.cc \
-		src/vendor/cli_call.cc \
-		src/vendor/reflection.pb.cc
+		gen/gen/reflection.grpc.pb.cc \
+		gen/gen/reflection.pb.cc \
+		src/vendor/cli_call.cc
 
 lib_auxl_grpc_a_CFLAGS = 
 
