--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ DerivedData/
 /py-compile
 /test-driver
 /ylwrap
+/gen/gen
 .deps/
 .dirstamp
 
@@ -124,6 +125,8 @@ autom4te.cache
 /config.status
 /configure.scan
 /stamp-h1
+/configure~
+/config.h.in~
 
 # https://www.gnu.org/software/libtool/
 
