--- a/config.h.in
+++ b/config.h.in
@@ -44,6 +44,12 @@
 /* Define to 1 if you have the `fork' function. */
 #undef HAVE_FORK
 
+/* Define to 1 if you have the file `gen/gen/reflection.pb.cc'. */
+#undef HAVE_GEN_GEN_REFLECTION_PB_CC
+
+/* Define to 1 if you have the file `gen/gen/reflection.pb.h'. */
+#undef HAVE_GEN_GEN_REFLECTION_PB_H
+
 /* Define to 1 if you have the `getcwd' function. */
 #undef HAVE_GETCWD
 
